fix: some bug fix
